[package]
name = "metaball-grower"
version = "0.1.0"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

[dependencies]
nalgebra = "0.18.0"
rand = "0.7.0"
ncollide3d = "0.19.2"   
kiss3d = "0.20.1"

[dependencies.sdl2]
version = "0.32.0"
features = ["gfx"]

[profile.dev]
opt-level = 2